Add Open in Colab

--- a/Code/Course_project_410_XLM_RoBERTa.ipynb
+++ b/Code/Course_project_410_XLM_RoBERTa.ipynb
@@ -4,10 +4,11 @@
   "metadata": {
     "accelerator": "TPU",
     "colab": {
-      "name": "Course_project_410(XLM-RoBERTa).ipynb",
+      "name": "Course_project_410_XLM_RoBERTa.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -28,6 +29,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bzhao10/CourseProject/blob/main/Code/Course_project_410_XLM_RoBERTa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
