Add Open in Colab

--- a/Code/Course_project_410_BERT_REMOVE_STOPWORDS_AND_UNNECESSARY_PUNCUATIONS.ipynb
+++ b/Code/Course_project_410_BERT_REMOVE_STOPWORDS_AND_UNNECESSARY_PUNCUATIONS.ipynb
@@ -4,10 +4,11 @@
   "metadata": {
     "accelerator": "TPU",
     "colab": {
-      "name": "Course project 410(edit).ipynb",
+      "name": "Course_project_410_BERT_REMOVE_STOPWORDS_AND_UNNECESSARY_PUNCUATIONS.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -1000,6 +1001,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bzhao10/CourseProject/blob/main/Code/Course_project_410_BERT_REMOVE_STOPWORDS_AND_UNNECESSARY_PUNCUATIONS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1011,7 +1022,7 @@
       "source": [
         "!pip install jsonlines"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1098,7 +1109,7 @@
         "    total.iloc[train_index].to_csv(\"data_{}/train.csv\".format(i))\n",
         "    total.iloc[dev_index].to_csv(\"data_{}/dev.csv\".format(i))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1187,7 @@
         "    total.iloc[train_index].to_csv(\"data_{}/train.csv\".format(i))\n",
         "    total.iloc[dev_index].to_csv(\"data_{}/dev.csv\".format(i))\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1208,7 +1219,7 @@
       "source": [
         "!pip install transformers==3.5.1"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1257,7 +1268,7 @@
         "# specify CPU/GPU\n",
         "device = torch.device(\"cpu\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1277,7 +1288,7 @@
         "df = pd.read_csv(\"twitter.csv\")\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1371,7 +1382,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1400,7 +1411,7 @@
         "# check class distribution\n",
         "df['label'].value_counts(normalize = True)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1431,7 +1442,7 @@
       "source": [
         "td.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1534,7 +1545,7 @@
         "df['text'] = df['context']+df['response']\n",
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1635,7 +1646,7 @@
         "\n",
         "test_text = td['text']    "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1689,7 +1700,7 @@
         "# Load the BERT tokenizer\n",
         "tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1797,7 +1808,7 @@
         "# encode text\n",
         "sent_id = tokenizer.batch_encode_plus(text, padding=True, return_token_type_ids=False)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1812,7 +1823,7 @@
       "source": [
         "print(sent_id)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1839,7 +1850,7 @@
         "\n",
         "pd.Series(seq_len).hist(bins = 30)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1877,7 +1888,7 @@
         "#could change to get best answer, maybe 400 better? could try \n",
         "max_seq_len = 100"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1917,7 +1928,7 @@
         "    return_token_type_ids=False\n",
         ")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1949,7 +1960,7 @@
         "test_seq = torch.tensor(tokens_test['input_ids'])\n",
         "test_mask = torch.tensor(tokens_test['attention_mask'])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1981,7 +1992,7 @@
         "# dataLoader for validation set\n",
         "val_dataloader = DataLoader(val_data, sampler = val_sampler, batch_size=batch_size)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1994,7 +2005,7 @@
         "for param in bert.parameters():\n",
         "    param.requires_grad = False"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2046,7 +2057,7 @@
         "\n",
         "      return x"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2061,7 +2072,7 @@
         "# push the model to GPU\n",
         "model = model.to(device)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2076,7 +2087,7 @@
         "# define the optimizer\n",
         "optimizer = AdamW(model.parameters(), lr = 1e-3)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2096,7 +2107,7 @@
         "\n",
         "print(class_wts)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2123,7 +2134,7 @@
         "# number of training epochs\n",
         "epochs = 10"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2191,7 +2202,7 @@
         "  #returns the loss and predictions\n",
         "  return avg_loss, total_preds"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2253,7 +2264,7 @@
         "\n",
         "  return avg_loss, total_preds"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2296,7 +2307,7 @@
         "    print(f'\\nTraining Loss: {train_loss:.3f}')\n",
         "    print(f'Validation Loss: {valid_loss:.3f}')"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2420,7 +2431,7 @@
         "path = 'saved_weights.pt'\n",
         "model.load_state_dict(torch.load(path))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2448,7 +2459,7 @@
         "  preds = preds.detach().cpu().numpy()\n",
         "  preds = np.argmax(preds, axis = 1)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2463,7 +2474,7 @@
       "source": [
         "print(preds)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2510,7 +2521,7 @@
         "    for row in f:\n",
         "      output.write(row)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     }
   ]
