--- a/Code/Course_project_410_RoBerta_large.ipynb
+++ b/Code/Course_project_410_RoBerta_large.ipynb
@@ -42,30 +42,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "VtwexhukQ5Cn",
-        "scrolled": true,
-        "outputId": "033c137f-ed47-4777-c36a-0fc9ec47b7fb"
+        "scrolled": true
       },
       "source": [
         "!pip install jsonlines"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting jsonlines\n",
-            "  Downloading https://files.pythonhosted.org/packages/4f/9a/ab96291470e305504aa4b7a2e0ec132e930da89eb3ca7a82fbe03167c131/jsonlines-1.2.0-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from jsonlines) (1.15.0)\n",
-            "Installing collected packages: jsonlines\n",
-            "Successfully installed jsonlines-1.2.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -141,70 +125,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Exl-xU_gaPx7",
-        "outputId": "08fa5697-7c37-4d36-eb5e-efa7bb9a8da1"
+        "id": "Exl-xU_gaPx7"
       },
       "source": [
         "!pip install transformers==3.5.1"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting sentencepiece\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/2d/6d4ca4bef9a67070fa1cac508606328329152b1df10bdf31fb6e4e727894/sentencepiece-0.1.94-cp36-cp36m-manylinux2014_x86_64.whl (1.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.1MB 6.7MB/s \n",
-            "\u001b[?25hInstalling collected packages: sentencepiece\n",
-            "Successfully installed sentencepiece-0.1.94\n",
-            "/bin/bash: brew: command not found\n",
-            "/bin/bash: brew: command not found\n",
-            "Collecting transformers\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/83/e74092e7f24a08d751aa59b37a9fc572b2e4af3918cb66f7766c3affb1b4/transformers-3.5.1-py3-none-any.whl (1.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.3MB 7.3MB/s \n",
-            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
-            "Collecting sentencepiece==0.1.91\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d4/a4/d0a884c4300004a78cca907a6ff9a5e9fe4f090f5d95ab341c53d28cbc58/sentencepiece-0.1.91-cp36-cp36m-manylinux1_x86_64.whl (1.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.1MB 17.1MB/s \n",
-            "\u001b[?25hCollecting sacremoses\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/34/09d19aff26edcc8eb2a01bed8e98f13a1537005d31e95233fd48216eed10/sacremoses-0.0.43.tar.gz (883kB)\n",
-            "\u001b[K     |████████████████████████████████| 890kB 26.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.5)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers) (20.4)\n",
-            "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.8)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
-            "Requirement already satisfied: protobuf in /usr/local/lib/python3.6/dist-packages (from transformers) (3.12.4)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
-            "Collecting tokenizers==0.9.3\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4c/34/b39eb9994bc3c999270b69c9eea40ecc6f0e97991dba28282b9fd32d44ee/tokenizers-0.9.3-cp36-cp36m-manylinux1_x86_64.whl (2.9MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.9MB 33.9MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.23.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (1.15.0)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.17.0)\n",
-            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (2.4.7)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf->transformers) (50.3.2)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2020.11.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.10)\n",
-            "Building wheels for collected packages: sacremoses\n",
-            "  Building wheel for sacremoses (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for sacremoses: filename=sacremoses-0.0.43-cp36-none-any.whl size=893257 sha256=88d01c6646694c8f99ea516516ae0cf2fbc19684890fd458d4a8dc13ea6580d8\n",
-            "  Stored in directory: /root/.cache/pip/wheels/29/3c/fd/7ce5c3f0666dab31a50123635e6fb5e19ceb42ce38d4e58f45\n",
-            "Successfully built sacremoses\n",
-            "Installing collected packages: sentencepiece, sacremoses, tokenizers, transformers\n",
-            "  Found existing installation: sentencepiece 0.1.94\n",
-            "    Uninstalling sentencepiece-0.1.94:\n",
-            "      Successfully uninstalled sentencepiece-0.1.94\n",
-            "Successfully installed sacremoses-0.0.43 sentencepiece-0.1.91 tokenizers-0.9.3 transformers-3.5.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -297,7 +224,7 @@
       },
       "source": [
         "# Initialize the send_id\n",
-        "text = [\"this is a Roberta model tutorial\", \"we will fine-tune a Roberta model\"]\n",
+        "text = [\"this is a Roberta large model tutorial\", \"we will fine-tune a Roberta large model\"]\n",
         "sent_id = tokenizer.batch_encode_plus(text, padding=True, return_token_type_ids=False)"
       ],
       "execution_count": null,
@@ -386,11 +313,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "g6mRLN3vtQXX",
-        "outputId": "9bdda137-3710-45ba-cce0-275aab15e0ff"
+        "id": "g6mRLN3vtQXX"
       },
       "source": [
         "# tokenize and encode sequences in the training set\n",
@@ -421,16 +344,7 @@
         ")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/transformers/tokenization_utils_base.py:2022: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
-            "  FutureWarning,\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
