--- a/Code/Course_project_410_RoBERTa.ipynb
+++ b/Code/Course_project_410_RoBERTa.ipynb
@@ -52,7 +52,7 @@
       "source": [
         "!pip install jsonlines"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,13 +70,19 @@
         "id": "rAhreXcYUBTm"
       },
       "source": [
+        "####    DATA PREPARATION - TRAINING DATA    ####\n",
+        "\n",
+        "# * Import libraries required for data cleaning and preparation\n",
+        "# * Update labels and create csv of training data\n",
         "import os\n",
         "import jsonlines\n",
         "import csv\n",
         "import pandas as pd\n",
         "import random\n",
         "\n",
-        "#The following method is used to create readable traindata in csv format\n",
+        "## Creates a list of dictionaries for our training data\n",
+        "# The dictionaries contain the labels and the data\n",
+        "# Labels are 0 if the tweet is sarcastic and 1 if not\n",
         "\n",
         "data = []\n",
         "\n",
@@ -102,7 +108,7 @@
         "\n",
         "    total = pd.read_csv(\"traindata.csv\")"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +117,10 @@
         "id": "jag_Pj7tQklb"
       },
       "source": [
-        "#The following method is used to create readable testdata in csv format\n",
+        "####    DATA PREPARATION - TEST DATA    ####\n",
+        "\n",
+        "# * Import libraries required for data cleaning and preparation\n",
+        "# * Update labels and create csv of training data\n",
         "data = []\n",
         "\n",
         "with open('test.jsonl',\"r+\",encoding='utf-8') as f:\n",
@@ -131,7 +140,7 @@
         "\n",
         "total = pd.read_csv(\"testdata.csv\")"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,9 +153,10 @@
         "outputId": "aa0400d1-3d4e-4b1c-bea7-41622f0a4c3c"
       },
       "source": [
+        "####    INSTALL PACKAGES FOR DEEP LEARNING   ####\r\n",
         "!pip install transformers==3.5.1"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,6 +193,7 @@
         "id": "LwruXiTXsORZ"
       },
       "source": [
+        "####    IMPORT PACKAGES INTO THE ENVIRONMENT AND SET CPU/GPU OPTION  ####\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import torch\n",
@@ -192,10 +203,10 @@
         "import transformers\n",
         "from transformers import AutoModel, BertTokenizerFast, RobertaTokenizer, RobertaTokenizerFast, AlbertTokenizer\n",
         "\n",
-        "# specify CPU as our device, since our Code will exceed Google Colab GPU RAM limitation\n",
+        "# Specify CPU as our device, since our Code will exceed Google Colab GPU RAM limitation\n",
         "device = torch.device(\"cpu\")"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +226,7 @@
         "df['text'] = df['response']+df['context']\r\n",
         "df.head() # Check the first 5 entries in the traindata.csv file"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +331,7 @@
         "td['text'] = td['context']+td['response'] \r\n",
         "td.head() # Check the first 5 entries in the testdata.csv file"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,16 +425,18 @@
         "id": "XryjXIYhQ_gM"
       },
       "source": [
-        "# Separate the traindata.csv into train and validation dataset\n",
+        "####    SPLIT DATA INTO TRAIN VS TEST  ####\n",
+        "# test_size determines the percentage (between 0 and 1) of how much data is withheld\n",
+        "# for validation purposes. Recall it is important to balance these so the model can be fit,\n",
+        "# but also that the model can be validated with a sufficient sample size.\n",
+        "# You will want to experiment with this based on your understanding of your data.\n",
         "train_text, val_text, train_labels, val_labels = train_test_split(df['text'], df['label'], \n",
         "                                                                    random_state=2018, \n",
         "                                                                    test_size=0.3, \n",
         "                                                                    stratify=df['label'])\n",
-        "\n",
-        "# Create test dataset to generate the answer.txt file from best model\n",
         "test_text = td['text']    "
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,6 +445,8 @@
         "id": "VG9h0KEotC_r"
       },
       "source": [
+        "####    SELECT PRETRAINED MODEL AND IMPORT INTO THE ENVIRONMENT  ####\n",
+        "\n",
         "# import RoBERTa pretrained model from transformer\n",
         "roberta = AutoModel.from_pretrained('roberta-base')\n",
         "\n",
@@ -439,7 +454,7 @@
         "# Load the RoBERTa tokenizer from transformer\n",
         "tokenizer = RobertaTokenizerFast.from_pretrained('roberta-base')"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +467,7 @@
         "text = [\"this is a Roberta model tutorial\", \"we will fine-tune a Roberta model\"]\n",
         "sent_id = tokenizer.batch_encode_plus(text, padding=True, return_token_type_ids=False)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +482,7 @@
       "source": [
         "print(sent_id)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,12 +504,14 @@
         "outputId": "2345db58-0398-4ae0-b9d5-c2b4ad0c203f"
       },
       "source": [
+        "####    VIEW DATA SEQUENCE LENGTH DISTRIBUTION AND MODIFY MAX SEQUENCE LENGTH  ####\n",
+        "\n",
         "# get length of all the messages in the train set\n",
         "seq_len = [len(i.split()) for i in train_text]\n",
         "\n",
         "pd.Series(seq_len).hist(bins = 30)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,10 +546,12 @@
         "id": "OMzKcnYxtOFP"
       },
       "source": [
-        "#Initialize the max sequence length\n",
+        "# Modify the below parameter to set the max sequence length that the model will ingest.\n",
+        "# Changing this parameter will impact performance of the model, so it is important\n",
+        "# to test different values.\n",
         "max_seq_len = 200"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -545,6 +564,8 @@
         "outputId": "0dd38448-be20-44cd-bc71-731d50db5e83"
       },
       "source": [
+        "####    TOKENIZE AND ENCODE THE DATA SEQUENCES TO BE USED BY THE MODEL  ####\n",
+        "\n",
         "# tokenize and encode sequences in the training set\n",
         "tokens_train = tokenizer.batch_encode_plus(\n",
         "    train_text.tolist(),\n",
@@ -572,7 +593,7 @@
         "    return_token_type_ids=False\n",
         ")"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,21 +611,28 @@
         "id": "kD_IfCzotVxj"
       },
       "source": [
-        "# for train set\n",
+        "####    CONVERT DATA INTO TENSORS  ####\n",
+        "\n",
+        "# A very important component of deep learning is the idea of transformations.\n",
+        "# While the data is in \"matrix\" format, it's important that we convert it\n",
+        "#   into tensors so that the data is always transformed according to a set of rules.\n",
+        "# Pytorch provides a simple way to convert these matrices into tensors.\n",
+        "\n",
+        "# Convert training set to tensors\n",
         "train_seq = torch.tensor(tokens_train['input_ids'])\n",
         "train_mask = torch.tensor(tokens_train['attention_mask'])\n",
         "train_y = torch.tensor(train_labels.tolist())\n",
         "\n",
-        "# for validation set\n",
+        "# Convert validation set to tensors\n",
         "val_seq = torch.tensor(tokens_val['input_ids'])\n",
         "val_mask = torch.tensor(tokens_val['attention_mask'])\n",
         "val_y = torch.tensor(val_labels.tolist())\n",
         "\n",
-        "# for test set\n",
+        "# Convert test set to tensors\n",
         "test_seq = torch.tensor(tokens_test['input_ids'])\n",
         "test_mask = torch.tensor(tokens_test['attention_mask'])"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,9 +641,12 @@
         "id": "OaDhHt7NtZRZ"
       },
       "source": [
+        "####    SET UP MODEL PARAMETERS  ####\n",
+        "\n",
+        "# We will now formally create the inputs to the model. \n",
         "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler\n",
         " \n",
-        "# define a batch size\n",
+        "#Define a batch size. In a sense, this defines how granular the model will be.\n",
         "batch_size = 31\n",
         "\n",
         "# wrap tensors\n",
@@ -636,7 +667,7 @@
         "# dataLoader for validation set\n",
         "val_dataloader = DataLoader(val_data, sampler = val_sampler, batch_size=batch_size)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,11 +676,14 @@
         "id": "oc380qoYtfE5"
       },
       "source": [
-        "# freeze all the parameters\n",
+        "# Freeze all the parameters\n",
+        "#\n",
+        "# By freezing the parameters, the model is more rigid but is able to be trained\n",
+        "# much faster.\n",
         "for param in roberta.parameters():\n",
         "    param.requires_grad = False"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -658,6 +692,8 @@
         "id": "Y0nqk53itiDN"
       },
       "source": [
+        "####    CREATE MODEL CLASS AND INITIALIZATION LOGIC  ####\n",
+        "\n",
         "class RoBERTa_Arch(nn.Module):\n",
         "\n",
         "    def __init__(self, roberta):\n",
@@ -701,7 +737,7 @@
         "\n",
         "      return x"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,13 +746,14 @@
         "id": "pyVFwzk5tjXo"
       },
       "source": [
-        "# pass the pre-trained RoBERTa to our define architecture\n",
+        "# Import the model optimizer from hugging face transformers\n",
+        "# This library allows the model to be optimized\n",
         "model = RoBERTa_Arch(roberta)\n",
         "\n",
         "# push the model to CPU\n",
         "model = model.to(device)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,13 +762,14 @@
         "id": "IGHNgzsDtqfP"
       },
       "source": [
-        "# optimizer from hugging face transformers\n",
+        "# Import the model optimizer from hugging face transformers\n",
+        "# This library allows the model to be optimized\n",
         "from transformers import AdamW\n",
         "\n",
         "# define the optimizer\n",
         "optimizer = AdamW(model.parameters(), lr = 1e-3)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,14 +782,14 @@
         "outputId": "b7e3de88-fe31-487b-b875-73228215d179"
       },
       "source": [
+        "#Compute the class weights that we will start with\n",
         "from sklearn.utils.class_weight import compute_class_weight\n",
         "\n",
-        "# compute the class weights\n",
         "class_wts = compute_class_weight('balanced', np.unique(train_labels), train_labels)\n",
         "\n",
         "print(class_wts)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,10 +813,16 @@
         "# loss function\n",
         "cross_entropy  = nn.NLLLoss(weight=weights) \n",
         "\n",
-        "# number of training epochs\n",
+        "# Define number of training epochs\n",
+        "#\n",
+        "# This is an extremely important hyperparameter that determines the number of times\n",
+        "# that the entire model is trained throughout. \n",
+        "#\n",
+        "# It is important to find a balance with this hyperparameter so that you do not overfit,\n",
+        "# but still attain good results. We found 10 epochs attained good results in our use case.\n",
         "epochs = 10"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +831,8 @@
         "id": "QlrAx2VLt0F5"
       },
       "source": [
-        "# function to train the model\n",
+        "####    DEFINE MODEL TRAINING FUNCTION  ####\n",
+        "\n",
         "def train():\n",
         "  \n",
         "  model.train()\n",
@@ -846,7 +891,7 @@
         "  #returns the loss and predictions\n",
         "  return avg_loss, total_preds"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +900,8 @@
         "id": "RmW_LsLct4lQ"
       },
       "source": [
-        "# function for evaluating the model\n",
+        "####    DEFINE MODEL EVALUATION FUNCTION  ####\n",
+        "\n",
         "def evaluate():\n",
         "  \n",
         "  print(\"\\nEvaluating...\")\n",
@@ -905,7 +951,7 @@
         "\n",
         "  return avg_loss, total_preds"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -918,6 +964,8 @@
         "outputId": "7e1d75d4-f676-456b-915f-848395603760"
       },
       "source": [
+        "####    RUN THE MODEL    ####\n",
+        "\n",
         "# set initial loss to infinite\n",
         "best_valid_loss = float('inf')\n",
         "\n",
@@ -948,7 +996,7 @@
         "    print(f'\\nTraining Loss: {train_loss:.3f}')\n",
         "    print(f'Validation Loss: {valid_loss:.3f}')"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1062,7 +1110,7 @@
         "path = 'saved_weights.pt'\n",
         "model.load_state_dict(torch.load(path))"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1138,7 @@
         "  preds = preds.detach().cpu().numpy()\n",
         "  preds = np.argmax(preds, axis = 1)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1110,6 +1158,8 @@
         "id": "qbLFvm3tFBfX"
       },
       "source": [
+        "####    CONVERT THE PREDICTIONS TO AN ANSWER.TXT FILE    ####\n",
+        "\n",
         "import csv\n",
         "import pandas as pd\n",
         "\n",
@@ -1140,7 +1190,7 @@
         "    for row in f:\n",
         "      output.write(row)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     }
   ]
